objects/ASI_CRM_Budget__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Case_9L__c</fullName>
        <label>Case (9L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_SG_SG_Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>CRM Budgets</relationshipLabel>
        <relationshipName>CRM_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>CRM Budgets</relationshipLabel>
        <relationshipName>ASI_CRM_SKU_Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CRM Budget</label>
    <listViews>
        <fullName>ASI_CRM_SG_SR_Budgets</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Case_9L__c</columns>
        <columns>ASI_CRM_Sales_Rep__c</columns>
        <columns>ASI_CRM_Sub_brand__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_External_Key__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Budget__c.ASI_CRM_SG_Salesman_Budget</value>
        </filters>
        <label>Sales Rep Budgets</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_WS_Budgets</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Sub_brand__c</columns>
        <columns>ASI_CRM_Case_9L__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_External_Key__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Budget__c.ASI_CRM_SG_Wholesaler_Budget</value>
        </filters>
        <label>Wholesaler Budgets</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Budgets</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Salesman_Budget</fullName>
        <active>true</active>
        <label>SG Salesman Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler_Budget</fullName>
        <active>true</active>
        <label>SG Wholesaler Budget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_SG_Budget_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_SG&quot;),
 NOT(ISBLANK( ASI_CRM_Sales_Rep__c)),
 NOT(ISBLANK(  ASI_CRM_Wholesaler__c ))

)</errorConditionFormula>
        <errorMessage>Please enter either Salesman or Wholesaler</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_FiscalYearValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_SG&quot;),
OR (
  LEN ( TEXT(ASI_CRM_Fiscal_Year__c )) = 0,
  NOT(REGEX( TEXT(ASI_CRM_Fiscal_Year__c ) , &quot;FY[0-9]{4}&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Please enter correct format of Fiscal Year (e.g. FY1415)</errorMessage>
    </validationRules>
</CustomObject>